# RawCameraDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cc/uphoton/activity/camerademo2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  ucalibrate.h  ucalibrate_types.h  udepthmap.h  udepthmap_types.h  uimgproc.h
app/src/main/java/cc/uphoton/rawcamera/activity/: MainActivity.java  PermissionActivity.java  SettingActivity.java
app/src/main/java/cc/uphoton/rawcamera/utils/: Const.java  Utils.java
app/src/main/res/layout/: activity_main.xml  dialog_setting_haixin.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/cc/uphoton/activity/camerademo2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
